<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.learning.suman.rsr.InfoActivity"
    android:id="@+id/info_layout">

    <!-- home page button-->
    <Button
        android:layout_width="fill_parent"
        android:layout_height="@dimen/home_button_height"
        android:id="@+id/info_home_button"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/home_button_text_info_page"
        android:textSize="@dimen/text_size"
        android:background="@color/button_color"
        android:drawableLeft="@mipmap/arrowbtn"
        android:drawableStart="@mipmap/arrowbtn"
        android:textColor="@color/white_text"
        android:gravity="start|center_vertical" />


    <!-- image displayed-->
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="@dimen/image_height"
        android:id="@+id/image_View"
        android:src="@drawable/info_bg"
        android:scaleType="fitXY"
        android:layout_below="@+id/info_home_button"
        android:layout_alignParentTop="@+id/info_home_button"
        android:adjustViewBounds="false"
        android:contentDescription="@string/image_description" />

    <!--border button-->
    <Button
        android:layout_width="match_parent"
        android:layout_height="@dimen/border_button_height"
        android:layout_below="@+id/image_View"
        android:background="@color/button_color"
        android:id="@+id/image_text_border_button"/>

    <!--display text-->
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="@dimen/textView_height"
        android:id="@+id/info_text_view"
        android:layout_alignBottom="@+id/image_text_border_button"
        android:layout_alignParentBottom="true"
        android:textSize="@dimen/text_size"
        android:text="@string/rsr_info"
        android:paddingTop="@dimen/textView_top_padding"
        android:textColor="@color/black_text" />



</RelativeLayout>
