<RelativeLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.learning.suman.rsr.RSRpechhulp"
    >
    <!--load home page button-->
    <Button
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:id="@+id/RSR_home_button"
    android:drawableLeft="@mipmap/arrowbtn"
    android:drawableStart="@mipmap/arrowbtn"
    android:text="@string/home_btn_text"
    android:background="@color/button_color"
    android:gravity="start|center_vertical"
    android:drawablePadding="@dimen/RSR_home_page_btn_drawable_padding"
    android:textColor="@color/white_text" />

<!--fragment displaying map-->
<fragment xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/map"
    tools:context="com.learning.suman.rsr.RSRpechhulp"
    android:name="com.google.android.gms.maps.SupportMapFragment"
    android:layout_below="@+id/RSR_home_button">

</fragment>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <!--close dialog box button-->
        <Button
            android:layout_width="wrap_content"
            android:layout_height="@dimen/Annuleren_btn_height"
            android:id="@+id/closeBtn"
            android:text="@string/annuleren_text"
            android:layout_marginTop="@dimen/Annuleren_margin_top"
            android:layout_marginLeft="@dimen/Annuleren_margin_left"
            android:layout_marginStart="@dimen/Annuleren_margin_left"
            android:textColor="@color/white_text"
            android:visibility="invisible"
            android:background="@color/button_color" />

        <!--dialog box text-->
        <TextView
            android:layout_width="@dimen/message_width"
            android:layout_height="@dimen/message_height"
            android:text="@string/call_btn_msg"
            android:gravity="center"
            android:layout_marginTop="@dimen/message_margin_top"
            android:layout_marginLeft="@dimen/message_margin_left"
            android:layout_marginStart="@dimen/message_margin_left"
            android:background="@color/message_color"
            android:focusable="false"
            android:textColor="@color/white_text"
            android:visibility="invisible"
            android:id="@+id/msgTextView"
            android:textSize="@dimen/big_text_size" />

        <!--bel button-->
        <Button
            android:layout_width="@dimen/message_width"
            android:layout_height="wrap_content"
            android:id="@+id/belRSRNuButton"
            android:text="@string/bel_btn_text"
            android:layout_marginTop="@dimen/bel_btn_margin_top"
            android:background="@color/button_color"
            android:layout_marginLeft="@dimen/bel_btn_margin_left"
            android:layout_marginStart="@dimen/bel_btn_margin_left"
            android:drawableLeft="@mipmap/phonebtnsec"
            android:drawableStart="@mipmap/phonebtnsec"
            android:gravity="center_vertical"
            android:textColor="@color/white_text" />




     </RelativeLayout>





</RelativeLayout>